styles/modules/OccurrenceDetails.module.scss
/**
 * Copyright 2021 The Rode Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@import "styles/constants";
@import "styles/mixins";

$SIDE_SPACING: 1rem;

.detailContainer {
  height: 100%;
  flex: 1;
}

.detailSummary {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: space-between;
  padding: 2rem $SIDE_SPACING;

  a {
    padding: 0 1rem 0 0;
  }

  @include desktopAndLarger {
    flex-direction: row;
  }
}

.title {
  font-size: 1.5rem;
  margin-bottom: 1rem;
}

.rightMargin {
  margin-right: 0.75rem;
}

.timestamps {
  text-align: left;

  @include desktopAndLarger {
    text-align: right;
  }
}

.detailContentContainer {
  width: 100%;

  @include tabletAndLarger {
    padding: $SIDE_SPACING 0 $SIDE_SPACING $SIDE_SPACING;
  }
}

.card {
  width: 100%;
  margin: 0 auto 0.25rem;
  padding: 1rem;

  @include tabletAndLarger {
    width: 90%;
    margin: 0 0 0.25rem auto;
  }
}

.cardTitle {
  font-weight: 600;
  font-size: 1.15rem;
  margin-bottom: 0.5rem;
}

.link {
  margin-top: 0.5rem;
}

.vulnerabilityCardHeader {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.vulnerabilityBreakdown {
  @include desktopAndLarger {
    text-indent: 1rem;
  }
}

.severity {
  display: inline-flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: fit-content;

  > p {
    padding: 0.1rem;
  }
}

.low {
  @extend .severity;
  color: $GREEN;
}

.medium {
  @extend .severity;
  color: $FLAME_ORANGE;
}

.high {
  @extend .severity;
  color: $HOT_RED;
}

.critical {
  @extend .severity;
  color: #f02719;
}

.severity_unspecified {
  @extend .severity;
  color: $MEDIUM_GREY;
}

.codeBlockContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin: 0 auto;

  @include tabletAndLarger {
    align-items: flex-end;
    max-width: 48vw;
  }
}

.fullWidthCodeBlockContainer {
  @extend .codeBlockContainer;
  width: 100%;

  @include tabletAndLarger {
    max-width: 97vw;
  }

  .codeBlock {
    width: 100%;
    border: solid 1px $SILVER;
  }
}

.darkTheme {
  &.detailContainer {
    background-color: $DT_BACKGROUND_DARK;
  }

  .timestamps {
    color: $DT_SUB_TEXT;
  }

  .vulnerabilityBreakdown {
    color: $DT_SUB_TEXT;
  }

  .card {
    background-color: $DT_BACKGROUND_LIGHT;
    color: $DT_MAIN_TEXT;
  }

  .link {
    a {
      color: $DT_LINK;
    }
  }
}

.lightTheme {
  &.detailContainer {
    background-color: $LT_BACKGROUND_DARK;
  }

  .timestamps {
    color: $LT_SUB_TEXT;
  }

  .vulnerabilityBreakdown {
    color: $LT_SUB_TEXT;
  }

  .card {
    background-color: $LT_BACKGROUND_LIGHT;
    color: $LT_MAIN_TEXT;
  }

  .link {
    a {
      color: $LT_LINK;
    }
  }
}

